--- a/src/_scss/style.scss
+++ b/src/_scss/style.scss
@@ -47,6 +47,8 @@
 @import "2_component/13_post";
 @import "2_component/14_banner";
 @import "2_component/15_section";
+@import "2_component/16_anchorlink";
+@import "2_component/17_link";
 @import "2_component/99_other";
 
 /*≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡≡
