--- a/src/_scss/1_layout/_breadcrumb.scss
+++ b/src/_scss/1_layout/_breadcrumb.scss
@@ -3,4 +3,13 @@
 .c-breadcrumb {
     padding-top: 20px;
     padding-bottom: 35px;
+
+    &--link {
+        padding-top: 25px;
+        padding-bottom: 37px;
+    }
+}
+
+.c-breadcrumb__arrow {
+    padding: 0 5px;
 }
