--- a/src/_scss/1_layout/_footer.scss
+++ b/src/_scss/1_layout/_footer.scss
@@ -2,43 +2,57 @@
 footer
 ------------------------------------------------------------*/
 .c-footer {
-  color: #000;
-  padding-top: 55px;
+    color: #000;
+    padding-top: 57px;
 
-  .c-footer__top {
-    border-top: 1px solid #ccc;
-    border-bottom: 1px solid #ccc;
-  }
-
-  .c-footer__breadcrumb {
-    text-align: left;
-    padding: 6px 0;
-    border-bottom: 1px solid #ccc;
-  }
-
-  .c-footer__box {
-    margin-top: 35px;
-    .c-box__title {
-      font-size: 1.4rem;
-      font-weight: 700;
-      padding-bottom: 5px;
-      border-bottom: 1px solid #ccc;
+    .c-footer__top {
+        border-top: 1px solid #ccc;
+        border-bottom: 1px solid #ccc;
     }
 
-    .c-box__link {
-        position: relative;
-        padding-left: 10px;
-        &::before {
-            content: '';
-            position: absolute;
-            width: 5px;
-            height: 5px;
-            border-radius: 50%;
-            background-color: #000;
-            top: 50%;
-            left: 0;
-            transform: translateY(-50%);
+    .c-footer__breadcrumb {
+        text-align: left;
+        padding: 6px 0;
+        border-bottom: 1px solid #ccc;
+    }
+
+    .c-footer__box {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        column-gap: 50px;
+        margin-top: 35px;
+        padding-bottom: 36px;
+
+        .c-box__title {
+            font-size: 1.4rem;
+            font-weight: 700;
+            padding-bottom: 5px;
+            border-bottom: 1px solid #ccc;
+            margin-bottom: 5px;
+        }
+
+        .c-box__link {
+            font-size: 1.4rem;
+            line-height: 1.4;
+            display: flex;
+            align-items: center;
+        }
+
+        .c-box__icon {
+            font-size: 0.8rem;
+            padding-right: 6px;
+            line-height: 0;
+
+            &--circle {
+                font-size: 0.5rem;
+            }
         }
     }
-  }
+
+    .c-footer__copyright {
+        text-align: center;
+        padding: 15px 0;
+        font-size: 1.2rem;
+        line-height: 1.6;
+    }
 }
