--- a/src/_scss/2_component/_09_table.scss
+++ b/src/_scss/2_component/_09_table.scss
@@ -4,6 +4,56 @@ table
 
 /*
 ------------------------------------------------------------*/
-.c-table1 {
-	
+.c-table {
+    margin-bottom: 47px;
+    width: 100%;
+
+    .c-table__caption {
+        margin-top: 3px;
+        margin-bottom: 20px;
+        padding: 10px 14px;
+        font-size: 1.6rem;
+        line-height: 1.3;
+        background-color: #ece6e6;
+        color: #222;
+    }
+
+    .c-table__link {
+        color: #f00;
+        text-decoration: underline;
+    }
+
+    .c-table__body {
+        border: 1px solid #ccc;
+        border-collapse: collapse;
+        border-spacing: 1px;
+        text-align: center;
+        width: 490px;
+        margin-top: 13px;
+
+        .c-table__heading {
+            border: 1px solid #ccc;
+            background-color: #acd373;
+            color: #000;
+            padding: 5px;
+            height: 36px;
+
+            &--gray {
+                background-color: #ece6e6;
+                width: 66px;
+            }
+
+            &--blue {
+                background-color: #6dcff6;
+                width: 66px;
+            }
+        }
+
+        .c-table__content {
+            border: 1px solid #ccc;
+            background-color: #fff;
+            color: #000;
+            padding: 5px;
+        }
+    }
 }
