--- a/src/_scss/2_component/_99_other.scss
+++ b/src/_scss/2_component/_99_other.scss
@@ -15,12 +15,15 @@ other
         font-size: 1.6rem;
         font-weight: 700;
         margin-bottom: 11px;
+        height: 35px;
+        line-height: 1.5;
     }
 
     &--post {
+        font-size: 1.4rem;
         font-weight: 400;
-        line-height: 1.4;
-        padding-block: 5px;
+        line-height: 1.3;
+        padding-block: 6px;
         padding-left: 21px;
         position: absolute;
     }
@@ -31,8 +34,6 @@ other
         font-size: 1.4rem;
         line-height: 1.4;
     }
-
-
 
     &--green {
         background-color: #a3d39c;
@@ -45,4 +46,8 @@ other
     &--pink {
         background-color: #ffdfdf;
     }
+}
+
+.c-text {
+    margin-bottom: 15px;
 }
