--- a/src/_layouts/layout.ejs
+++ b/src/_layouts/layout.ejs
@@ -8,7 +8,7 @@
     <title>
       <%= (typeof title != "undefined" ? title : "Page title") %>
     </title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" >
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.2.0/css/all.min.css">
     {{ meta }}
     <script type="module" src="/_scss/style.js"></script>
     {{ head }}
