--- a/src/_scss/1_layout/_header.scss
+++ b/src/_scss/1_layout/_header.scss
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 0;
+    padding: 20px 0 19px;
     position: relative;
     border-bottom: 1px solid #a8a8a8;
 }
