--- a/src/_scss/2_component/_01_btn.scss
+++ b/src/_scss/2_component/_01_btn.scss
@@ -4,6 +4,15 @@ btn
 
 /*
 ------------------------------------------------------------*/
-.c-section__button {
-    
+.c-button {
+    border: 2px solid #000;
+    background-color: #6dcff6;
+    color: #000;
+    // width: 100%;
+    display: block;
+    text-align: center;
+    font-size: 3.2rem;
+    line-height: 0.5;
+    font-weight: 700;
+    padding: 30px 0;
 }
