--- a/src/_scss/2_component/_15_section.scss
+++ b/src/_scss/2_component/_15_section.scss
@@ -25,8 +25,10 @@
             background-color: transparent;
             border-bottom: 2px solid #ccc;
             padding-left: 0;
+            padding-top: 13px;
             padding-bottom: 8px;
             margin-bottom: 26px;
+            transform: translateX(-1px);
         }
 
         &--orange {
@@ -37,6 +39,21 @@
         &--blue {
             border-color: #6dcff6;
             background-color: #ebebeb;
+        }
+
+        &--link2 {
+            padding-bottom: 14px;
+            margin-bottom: 22px;
+            border: 0;
+            border-left: 7px solid;
+            color: #11638a;
+            background-color: #bcd5e1;
+        }
+
+        &--red {
+            color: #f5989d;
+            background-color: #ffe8e9;
+            transform: translate(0, 1px);
         }
     }
 
@@ -111,6 +128,12 @@
 
     &--table {
         margin-top: -21px;
-        margin-bottom: 3px;
+        margin-bottom: 5px;
     }
+
+    &--link2 {
+        margin-top: 50px;
+        padding-bottom: 10px;
+    }
+
 }
