--- a/src/_scss/2_component/_99_other.scss
+++ b/src/_scss/2_component/_99_other.scss
@@ -50,4 +50,90 @@ other
 
 .c-text {
     margin-bottom: 15px;
+
+    &--link1 {
+        margin-bottom: 16px;
+        font-size: 1.4rem;
+        font-weight: 500;
+        margin-top: 24px;
+        transform: translate(-1px, 1px);
+    }
+
+    &--link2 {
+        line-height: 1.335;
+        margin-left: -1px;
+    }
+
+    &--red {
+        color: #c40000;
+    }
+}
+
+.c-article {
+    padding-top: 35px;
+
+    .c-article__header {
+        font-size: 1.6rem;
+        display: flex;
+        align-items: center;
+        padding-bottom: 4px;
+
+        &--blue {
+            color: #11638a;
+            transform: translate(-1px, 0);
+        }
+
+        &--red {
+            color: #f5989d;
+            transform: translate(-1px, 0);
+        }
+    }
+
+    .c-article__list {
+        counter-reset: item;
+        list-style-position: inside;
+        padding-top: 14px;
+        padding-left: 16px;
+
+        .c-list__item {
+            display: block;
+            position: relative;
+            padding-bottom: 7px;
+        }
+
+        .c-list__item::before {
+            content: counters(item, ".") ".";
+            counter-increment: item;
+            position: absolute;
+            margin-right: 100%;
+            right: 4px;
+            color: #f5989d;
+        }
+
+        .c-article__child {
+            padding-top: 8px;
+            padding-left: 45px;
+
+            .c-list__item::before {
+                right: 1px;
+            }
+        }
+    }
+
+    &--seedling {
+        padding-top: 14px;
+    }
+
+    &--comment {
+        padding-top: 15px;
+    }
+}
+
+.c-icon {
+    font-size: 2rem;
+    margin-right: 6px;
+}
+
+.c-link2__title {
+    margin-top: 7px;
 }
