--- a/src/_scss/1_layout/_footer.scss
+++ b/src/_scss/1_layout/_footer.scss
@@ -36,6 +36,7 @@ footer
             line-height: 1.4;
             display: flex;
             align-items: center;
+            font-weight: 400;
 
             &--last {
                 transform: translateX(2px);
