--- a/src/_scss/2_component/_04_table.scss
+++ b/src/_scss/2_component/_04_table.scss
@@ -54,14 +54,13 @@ table
                 background-color: #6dcff6;
                 width: 66px;
                 color: #222;
-
             }
         }
 
         .c-table__content {
             border: 1px solid #ccc;
             background-color: #fff;
-            color: #000;
+            color: #222;
             padding: 5px;
         }
     }
@@ -83,6 +82,7 @@ table
 
         .c-table__heading {
             width: 275px;
+            font-weight: 500;
         }
 
         .c-table__heading:first-child {
