--- a/src/_scss/2_component/_05_post.scss
+++ b/src/_scss/2_component/_05_post.scss
@@ -11,11 +11,13 @@
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
+        color: #222;
 
         .c-post__title {
             font-size: 1.6rem;
             flex: 0;
             line-height: 1;
+            color: #222;
         }
 
         .c-post__text {
@@ -50,7 +52,6 @@
     }
 
     &--anchor2 {
-        
         width: 235px;
         margin-bottom: 16px;
     }
@@ -72,6 +73,7 @@
     font-size: 1.4rem;
     line-height: 1.4;
     font-weight: 500;
+    color: #222;
 
     &--bold {
         font-weight: 700;
