--- a/src/_layouts/layout.ejs
+++ b/src/_layouts/layout.ejs
@@ -1,16 +1,16 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="icon" type="image/svg+xml" href="../_public/favicon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
       <%= (typeof title != "undefined" ? title : "Page title") %>
     </title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.2.0/css/all.min.css">
     {{ meta }}
-    <script type="module" src="/_scss/style.js"></script>
+    <script type="module" src="./_scss/style.js"></script>
     {{ head }}
   </head>
   <body>
@@ -22,6 +22,6 @@
     <%- include('_partials/footer'); -%>
 
     {{ script }}
-    <script src="/assets/js/main.js"></script>
+    <script src="./assets/js/main.js"></script>
   </body>
 </html>
