--- a/src/_partials/header.ejs
+++ b/src/_partials/header.ejs
@@ -1,5 +1,5 @@
 <header class="c-header l-container">
-  <h1 class="c-header__logo"><a href="<%= BASE_URL %>index.html"><img src="/assets/img/logo.png" alt="Logo"></a></h1>
+  <div class="c-header__logo"><a href="<%= BASE_URL %>index.html"><img src="./assets/img/logo.png" alt="Logo"></a></div>
   <nav class="c-gnav">
     <ul>
       <% if (typeof linklists != 'undefined') { %>
