--- a/src/_scss/2_component/_11_other.scss
+++ b/src/_scss/2_component/_11_other.scss
@@ -58,6 +58,7 @@ other
         display: flex;
         align-items: center;
         padding-bottom: 4px;
+        font-weight: 500;
 
         &--blue {
             color: #11638a;
